entity transfer sycn fix