@@ -14,19 +14,17 @@ import com.dpw.runner.shipment.services.commons.responses.DependentServiceRespon
 import com.dpw.runner.shipment.services.commons.responses.IRunnerResponse;
 import com.dpw.runner.shipment.services.dao.interfaces.*;
 import com.dpw.runner.shipment.services.document.config.DocumentManagerRestClient;
-import com.dpw.runner.shipment.services.dto.request.ConsolidationDetailsRequest;
-import com.dpw.runner.shipment.services.dto.request.CopyDocumentsRequest;
-import com.dpw.runner.shipment.services.dto.request.CustomAutoEventRequest;
-import com.dpw.runner.shipment.services.dto.request.EmailTemplatesRequest;
-import com.dpw.runner.shipment.services.dto.request.UsersDto;
-import com.dpw.runner.shipment.services.dto.request.ShipmentRequest;
+import com.dpw.runner.shipment.services.dto.request.*;
 import com.dpw.runner.shipment.services.dto.response.ConsolidationDetailsResponse;
 import com.dpw.runner.shipment.services.dto.response.LogHistoryResponse;
 import com.dpw.runner.shipment.services.dto.response.ShipmentDetailsResponse;
 import com.dpw.runner.shipment.services.dto.v1.request.TaskCreateRequest;
-import com.dpw.runner.shipment.services.dto.v1.request.V1UsersEmailRequest;
 import com.dpw.runner.shipment.services.dto.v1.request.TaskUpdateRequest;
-import com.dpw.runner.shipment.services.dto.v1.response.*;
+import com.dpw.runner.shipment.services.dto.v1.request.V1UsersEmailRequest;
+import com.dpw.runner.shipment.services.dto.v1.response.UsersRoleListResponse;
+import com.dpw.runner.shipment.services.dto.v1.response.V1DataResponse;
+import com.dpw.runner.shipment.services.dto.v1.response.V1TenantResponse;
+import com.dpw.runner.shipment.services.dto.v1.response.V1TenantSettingsResponse;
 import com.dpw.runner.shipment.services.entity.*;
 import com.dpw.runner.shipment.services.entity.commons.BaseEntity;
 import com.dpw.runner.shipment.services.entity.enums.ShipmentRequestedType;
@@ -74,9 +72,7 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.parameters.P;
 import org.springframework.stereotype.Service;
-
 
 import javax.transaction.Transactional;
 import java.time.LocalDate;
@@ -89,7 +85,6 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 
 import static com.dpw.runner.shipment.services.commons.constants.Constants.*;
-
 import static com.dpw.runner.shipment.services.helpers.DbAccessHelper.fetchData;
 import static com.dpw.runner.shipment.services.utils.CommonUtils.constructListCommonRequest;
 
@@ -1740,18 +1735,19 @@ public class EntityTransferService implements IEntityTransferService {
     private void syncToV1(Long id, List<Long> shipmentIds) {
         try {
             SyncingContext.setContext(Boolean.TRUE);
-            var consolidation = consolidationDetailsDao.findById(id).orElse(new ConsolidationDetails());
-            consolidationDetailsDao.entityDetach(Arrays.asList(consolidation));
+            List<ShipmentDetails> shipments;
+            ConsolidationDetails consolidation = consolidationDetailsDao.findById(id).orElse(new ConsolidationDetails());
+            consolidationDetailsDao.entityDetach(List.of(consolidation));
+            if (!CommonUtils.listIsNullOrEmpty(shipmentIds)) {
+                shipments = shipmentDao.findShipmentsByIds(new HashSet<>(shipmentIds));
+                shipmentDao.entityDetach(shipments);
+                shipments = shipmentDao.findShipmentsByIds(new HashSet<>(shipmentIds));
+                for (var shipment : shipments)
+                    shipmentSync.sync(shipment, null, null, StringUtility.convertToString(consolidation.getGuid()), false);
+            }
+            consolidation = consolidationDetailsDao.findById(id).orElse(new ConsolidationDetails());
             consolidationSync.sync(consolidation, StringUtility.convertToString(consolidation.getGuid()), false);
 
-            if (!CommonUtils.listIsNullOrEmpty(shipmentIds)) {
-                var shipments = shipmentDao.findShipmentsByIds(new HashSet<>(shipmentIds));
-                shipmentDao.entityDetach(shipments);
-
-                for (var shipment : shipments)
-                    shipmentSync.sync(shipment, null, null, StringUtility.convertToString(shipment.getGuid()), false);
-
-            }
         } catch (Exception ex) {
             log.error(String.format(ErrorConstants.ERROR_WHILE_SYNC, ex.getMessage()));
         }
